Fixed contrast and accessibility issues

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -21,7 +21,7 @@ body {
 }
 
 a {
-  color: $teal-600;
+  color: $teal-700;
 
   &:hover {
     color: $teal-800;
